--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,11 +1,6 @@
-.subtitle {
-  margin-bottom: 0 !important;
-  margin-top: 0 !important;
+.info img{
+    height: 25%;
+    width: 25%;
 }
-.subtitle li {
-    display: inline-block;
-}
-.subtitle li i {
-  padding: 10px;
-}
+
 @import "font-awesome/scss/font-awesome"
