--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -5,8 +5,21 @@
     height: 50%;
     width: 50%;
 }
+
 .subtitle {
   margin-top: -1.5rem;
+}
+.title{
+  color : #464646 !important;
+}
+
+$body-background-color:  #e3e3e3;
+
+.left-side {
+  background-color: #efeeee;
+}
+article {
+  background-color: #efeeee;
 }
 .left-side .container{
   margin-top: 1.5rem;
