--- a/public/stylesheets/bulma/sass/grid/tiles.sass
+++ b/public/stylesheets/bulma/sass/grid/tiles.sass
@@ -15,7 +15,7 @@
     &:not(:last-child)
       margin-bottom: 0.75rem
   &.is-child
-    margin: 0 !important
+    margin: 0
   &.is-parent
     padding: 0.75rem
   &.is-vertical
