--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,9 +3,10 @@ html
   head
     title= title
     meta(charset='utf-8')
+    link(href="https://use.fontawesome.com/releases/v5.0.4/css/all.css",rel="stylesheet")
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(href="https://fonts.googleapis.com/css?family=Abel|Raleway|Roboto", rel="stylesheet")
     meta(name='viewport', content='width=device-width, initial-scale=1')
+    
   body
-    block content
-    script(src='/javascripts/jquery-3.2.1.min.js')
-      
+    block content    
