--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,9 @@ html
     title= title
     meta(charset='utf-8')
     link(href="https://use.fontawesome.com/releases/v5.0.4/css/all.css",rel="stylesheet")
+    meta(description="Erwan Leboucher, Full-Stack Developer. Aspirant Full-Stack Developer specializing in Back-End. Enthusiast of technology, science and engineering.")
+    meta(keywords="Erwan Leboucher, Leboucher, Developer, Full-Stack")
+    meta(author="Erwan Leboucher")
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(href="https://fonts.googleapis.com/css?family=Abel|Raleway|Roboto", rel="stylesheet")
     meta(name='viewport', content='width=device-width, initial-scale=1')
