--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,8 @@ html
     title= title
     meta(charset='utf-8')
     link(href="https://use.fontawesome.com/releases/v5.0.4/css/all.css",rel="stylesheet")
+    link(rel="icon",type="image/png",href="/images/favicon_32x32.png",sizes="32x32")
+    link(rel="icon",type="image/png",href="/images/favicon_16x16.png",sizes="16x16")
     meta(description="Erwan Leboucher, Full-Stack Developer. Aspirant Full-Stack Developer specializing in Back-End. Enthusiast of technology, science and engineering.")
     meta(keywords="Erwan Leboucher, Leboucher, Developer, Full-Stack")
     meta(author="Erwan Leboucher")
