--- a/views/index.pug
+++ b/views/index.pug
@@ -51,7 +51,7 @@ block content
                 li
                   a(href=val.url) 
                     i(class=val.icon)
-                  a(href=val.url) #{val.url}
+                  a(href=val.url) #{val.username}
                     
     div(class="column")
         div(class="container right-side")
